cmake_minimum_required(VERSION 2.8)
project(SuperVelha)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

file(GLOB SOURCE_FILES
    "src/*.h"
    "src/*.cpp"
)

add_executable(SuperVelha ${SOURCE_FILES})

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake")

find_package(SFML 2 COMPONENTS system window graphics REQUIRED)

include_directories(${SFML_INCLUDE_DIR})

target_link_libraries(SuperVelha ${SFML_LIBRARIES})
